# walk_up_effect

./: .gitignore  README.rst  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  webpack-stats.json  webpack.config.js
.envs/.local/: .postgres
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
requirements/: base.txt  local.txt
walk_up_effect/: conftest.py
walk_up_effect/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
walk_up_effect/donations/: admin.py  apps.py  models.py  urls.py  views.py
walk_up_effect/donations/migrations/: 0001_initial.py
walk_up_effect/static/bundle/css/: libs.bundle.css  libs.bundle.css.map  theme.bundle.css  theme.bundle.css.map
walk_up_effect/static/bundle/js/: theme.bundle.js  theme.bundle.js.map  vendor.bundle.js  vendor.bundle.js.map
walk_up_effect/static/js/: aos.js  jarallax.js  navbar.js  popover.js  theme.js  tooltip.js  typed.js  user.js
walk_up_effect/static/js/user/: stripe.js  sweet-alerts.js
walk_up_effect/static/sass/: _user.scss  libs.scss  theme.scss
walk_up_effect/static/sass/theme/: _alert.scss  _aos.scss  _breadcrumb.scss  _buttons.scss  _card.scss  _close.scss  _collapse.scss  _device.scss  _feather.scss  _flickity.scss  _functions.scss  _list.scss  _mixins.scss  _navbar.scss  _popover.scss  _screenshot.scss  _section.scss  _theme.scss  _type.scss  _variables.scss  _vendor.scss
walk_up_effect/static/sass/theme/forms/: _floating-labels.scss  _form-check.scss  _form-control.scss  _form-select.scss
walk_up_effect/static/sass/theme/mixins/: _badge.scss  _buttons.scss
walk_up_effect/static/sass/theme/utilities/: _background.scss  _borders.scss  _images.scss  _overlay.scss  _position.scss  _shadows.scss  _visibility.scss
walk_up_effect/static/sass/user/: _rotating-card.scss  _stripe.scss  _sweet-alerts.scss  _zap.scss
walk_up_effect/templates/: base.html
walk_up_effect/templates/donations/: cancelled.html  home.html  payment_form.html  success.html
walk_up_effect/templates/pages/: contact-us.html  home.html  meet-the-team.html  mission.html
walk_up_effect/templates/partials/: footer.html  modals.html  navbar.html
walk_up_effect/templates/partials/modals/: modal-change.html  modal-educate.html  modal-inspire.html  modal-motivate.html  modal-provide.html
walk_up_effect/templates/partials/sections/: how-to-walk-up.html  our-team.html  our-why.html  walk-up-steps.html
walk_up_effect/templates/partials/shapes/waves/: gentle-wave.html
walk_up_effect/users/: admin.py  apps.py  models.py  urls.py
walk_up_effect/users/migrations/: 0002_alter_user_id.py
walk_up_effect/users/tests/: test_admin.py  test_forms.py  test_models.py  test_urls.py  test_views.py
