[tool.poetry]
name = "walk_up_effect"
version = "0.1.0"
description = ""
authors = ["Cameron Shannon <cameroncshannon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytz = "2021.1"
python-slugify = "5.0.2"
Pillow = "8.3.1"
rcssmin = "1.0.6"
argon2-cffi = "21.1.0"
hiredis = "2.0.0"
gunicorn = "^20.1.0"
psycopg2 = "2.9.1"
redis = "3.5.3"
uvicorn = "^0.15.0"
Django = "^3.2.6"
django-environ = "^0.5.0"
django-model-utils = "^4.1.1"
django-allauth = "^0.45.0"
django-crispy-forms = "^1.12.0"
django-compressor = "^2.4.1"
django-redis = "^5.0.0"
django-webpack-loader = "^1.3.0"
stripe = "^2.60.0"
whitenoise = "5.3.0"


[tool.poetry.dev-dependencies]
black = "^21.8b0"
Sphinx = "4.1.2"
sphinx-autobuild = "2021.3.14"
flake8 = "3.9.2"
flake8-isort = "^4.0.0"
coverage = "^5.5"
psycopg2-binary = "2.9.1"
pytest = "6.2.5"
pytest-django = "4.4.0"
pytest-sugar = "0.9.4"
watchgod = "0.7"
Werkzeug = "1.0.1"
pylint-django = "^2.4.4"
#pre-commit = "^2.14.1"
factory-boy = "^3.2.0"
django-coverage-plugin = "^2.0.0"
django-extensions = "3.1.3"
django-debug-toolbar = "^3.2.2"
django-stubs = "^1.8.0"
ipdb = "0.13.9"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
